[package]
name = "monout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-cloudwatchlogs = "0.30.0"
futures = "0.3.28"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
time = { version = "0.3.28", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
